package ar.edu.unahur.obj2.energia.operaciones;

public interface Operable {
    public void ejecutar() throws ReservaExcedidaException;
    public void deshacer();
}
