@startuml

'--- Patrón Command ---

class BateriaAlmacenamiento << Receiver/Publisher>> {
    -identificador: String
    -nivelDeEnergia: double
    -sistemasPerifericos: List<Observador>
    +getIdentificadorBateria(): Integer
    +getNivelEnergiaActual(): double
    +cargar(energia: double): void
    +consumir(energia: double): void
}

class ControladorOperaciones << Invoker >> {
    -ultimoComando: Operable
    +ejecutar(comando: Operable): void
    +deshacer(): void
    
}
note left of ControladorOperaciones
Al tener <b>Composite</b> en el diseño, el administrador puede
deshacer un lote ya que puede tratar al mismo
como un comando individual.
<b>Como Rutina solo se puede ejecutar</b>
<b>una vez, desde la perspectiva del invoker el</b>
<b>lote de operaciones pendientes se consumió.</b>
<b>No quedan operaciones "pendientes" esperando</b>
<b>ser ejecutadas en ese mismo objeto.</b>
end note

interface Operable <<Command/Component>> {
    +ejecutar(): void
    +deshacer(): void

}
note right of Operable
    <b>Command</b>: Command
    <b>Composite</b>: Component.
end note

abstract class Operacion implements Operable{
    #bateria: BateriaAlmacenamiento
    #energia: double
    #ejecutado: Boolean
}
note left of Operacion
        Captura lo que comparten
        las leafs.
end note

class OperacionCarga extends Operacion{
    +ejecutar(): void
    +deshacer(): void
}

class OperacionConsumo extends Operacion{
    +ejecutar(): void
    +deshacer(): void
}

class Rutina <<Composite>> implements Operable{
    -loteDeOperaciones: List<Operable>
    -ejecutado: Boolean
    +agregarOperacionALote(operacion: Operable): void
    +removerOperacionDeLote(operacion: Operable): void
    +ejecutar()
    +deshacer()

}
note bottom of Rutina
    <b>Rutina se comporta igual que un comando concreto:</b>
    <b>ejecutable una vez, deshacible una vez, reversible.</b>
    Cuando el ControladorDeOperaciones quiere ejecutar un lote,
    ya sea diferido o no, el cliente lo crea y se lo pasa.
    El Cliente siempre decide
    cuándo se ejecutan las operaciones.
end note


interface Observador <<Subscriber>>{
    +reaccionar(bateria: BateriaAlmacenamiento, tipoOperacion: String, energia: double)
}

class RegistroCentralDeAuditoria implements Observador{
    +reaccionar(bateria: BateriaAlmacenamiento, tipoOperacion: String, energia: double)
}

class NotificacionesAlAdministrador implements Observador{
    +reaccionar(bateria: BateriaAlmacenamiento, tipoOperacion: String, energia: double)
}

class AlarmaDeReservaCritica implements Observador{
    +reaccionar(bateria: BateriaAlmacenamiento, tipoOperacion: String, energia: double)
}


OperacionConsumo --> BateriaAlmacenamiento: transforma
OperacionCarga --> BateriaAlmacenamiento: transforma

BateriaAlmacenamiento  o--> Observador: notifica

ControladorOperaciones --> Operable : ejecuta
    

   
@enduml
